--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
     <!-- 主要内容展示 -->
     <div class="content animate">
         <h2>每日文章和分享</h2>
-        <p><strong>最新文章：</strong> <span id="latest-article">如何高效利用时间</span></p>
-        <p><strong>文章发布日期：</strong> <span id="article-date">2025-05-27</span></p>
+        <p><strong>最新文章：</strong> <span id="latest-article">艾尔顿法环</span></p>
+        <p><strong>文章发布日期：</strong> <span id="article-date">2025-05-25</span></p>
         <h3>文章内容</h3>
         <p id="article-content">这是我的最新文章内容。内容将动态更新。</p>
         <h3>图片/视频分享</h3>
