--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <p><strong>最新文章：</strong> <span id="latest-article">艾尔登法环</span></p>
         <p><strong>文章发布日期：</strong> <span id="article-date">2025-05-25</span></p>
         <h3>文章内容</h3>
-        <p id="article-content">这是我的最新文章内容。内容将动态更新。</p>
+        <p id="article-content">展示艾尔登法环这款游戏。</p>
         <h3>图片/视频分享</h3>
         <img src="ring.jpg" alt="分享的图片" width="100%">
         <br>
